(lang dune 3.6)

(name wanbs)

(generate_opam_files true)

(source
 (github aleksrutins/wanbs))

(authors "Aleks Rutins")

(maintainers "Maintainer Name")

(license GPL-3.0)

(documentation https://url/to/documentation)

(package
 (name wanbs)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
